--- a/layouts/partials/widgets/sponsor.html
+++ b/layouts/partials/widgets/sponsor.html
@@ -12,7 +12,7 @@
     {{ range $item := $page.Params.item }}
     <div class="col-12 col-sm-3" style="margin:0 auto;">
       <a href="{{$item.org_url}}" target="_blank">
-      <img src="{{printf "img/%s" $item.image_url | absURL }}">
+      <img src="{{printf "media/%s" $item.image_url | absURL }}">
       </a>
     </div>
     {{end}}
